--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <div class="logo">
-        <img src="/images/logo.png" alt="">
+        <a href="/"><img src="/images/logo.png" alt=""></a>
     </div>
     <div class="nav_bar">
         <ul>
@@ -14,6 +14,6 @@
         </ul>
     </div>
     <div class="avatar">
-
+        <img src="/images/avatar.webp" alt="" width="50px">
     </div>
 </header>
