--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,12 @@
-<% let img = ["carosel 1.png", "carosel 2.png"]; %>
+<div class="alert alert-success">
+    <div class="icon__wrapper">
+        <span class="mdi mdi-alert-outline"></span>
+    </div>
+    <p>Blog Add successfully ^^</p>
+</div>
 <div class="container_body">
     <div class="carosel">
-        <img src="/images/<%= img[0] %>" alt="">
+        <img src="/images/carosel 1.png" alt="">
     </div>
     <div class="blog_title_container">
         <h1 class="blog_title">BLOG</h1>
@@ -11,11 +16,12 @@
             <h3>All Blogs</h3>
         </div>
         <div class="blog_choice">
-            <select name="category" class="select_cat_btn">
+            <select name="category" class="select_cat_btn" onchange="location = this.value">
                 <option value="" disabled selected>Select Category</option>
-                <option value="">React native</option>
-                <option value="">javascript</option>
-                <option value="">react ja</option>
+                <option value="/">All</option>
+                <% category.forEach(ele => { %>
+                    <option value="/category/<%= ele.id %>"><%= ele.name_category %></option>
+                <% }) %>
             </select>
             <div class="search_container">
                 <input type="search" placeholder="search blogs ...">
@@ -23,21 +29,26 @@
                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                 </svg>
             </div>
-            <button class="add_blog_btn">
-                +
-            </button>
+            <a href="/blog" style="text-decoration: none;">
+                <button class="add_blog_btn">
+                    +
+                </button>
+            </a>
         </div>
     </div>
     <div class="blog_list_container">
-        <% for (let i = 0; i < 6; i++) { %>
+        <% blogs.forEach(ele => { %>
             <div class="blog_cart">
-                <img src="/images/img-<%= i + 1%>.png" alt="">
-                <h4>What ever what happen dont im gonna be</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim magni, necessitatibus, molestias, 
-                    dolore voluptas eius perspiciatis nesciunt beatae fugit.
-                </p>
+                <a href="/singleBlog/<%= ele.id %>">
+                    <img src="/storage/<%= ele.blog_image %>" alt="" width="100%">
+                    <div>
+                        <h4><%= ele.title %></h4>
+                        <p>
+                            <%= ele.description %>
+                        </p>
+                    </div>
+                </a>
             </div>
-        <% } %>
+        <% }); %>
     </div>
 </div>
