--- a/public/style/style.css
+++ b/public/style/style.css
@@ -106,6 +106,7 @@ header {
     padding: 5px 15px;
     color: white;
     font-size: 16px;
+    box-shadow: #4AC8D5 0 10px 20px -10px;
 }
 .blog_choice .search_container {
     position: relative;
@@ -121,6 +122,7 @@ header {
     width: 40%;
 }
 .blog_choice input {
+    box-shadow: #4AC8D5 0 0 10px -2px;
     border: 1px solid #ccc;
     border-radius: 14px;
     padding: 5px 14px;
@@ -143,16 +145,30 @@ header {
     align-items: center;
     font-size: 30px;
     cursor: pointer;
+    box-shadow: #4AC8D5 0 10px 20px -10px;
+    animation: bounce 1s linear infinite;
+}
+.blog_choice .add_blog_btn:hover {
+    background-color: #3a9faa;
+    transition: all .3s ease-in-out;
+    animation: none;
 }
 .blog_list_container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    row-gap: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
     margin: 3% 0;
+    width: 100%;
 }
 .blog_list_container .blog_cart {
     width: 90%;
+}
+.blog_list_container .blog_cart a {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+    text-decoration: none;
 }
 .blog_list_container .blog_cart p {
     color: #7E7979;
@@ -192,22 +208,48 @@ footer {
     text-decoration: none;
     color: black;
     width: fit-content;
+    font-size: 18px;
     font-weight: 700;
     padding-left: 10px;
+}
+main {
+    margin-bottom: 2rem;
 }
 .main_container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     place-items: center;
-    background: #EAE9E9;
     margin: 1rem;
     padding: 2rem 0;
     border-radius: 18px;
-    height: 70vh;
+    height: 85vh;
+    position: relative;
+    overflow: hidden;
+}
+.main_container::before {
+    content: "";
+    position: absolute;
+    background-image: linear-gradient(#4AC8D5, #36939d);
+    width: 140%;
+    height: 70%;
+    z-index: -10;
+    /* border-radius: 18px; */
+    animation: rotate 8s linear infinite;
+}
+.main_container::after {
+    content: "";
+    background-color: #EAE9E9;
+    position: absolute;
+    inset: 5px;
+    border-radius: 18px;
 }
 .main_container .form_container {
     width: 80%;
     height: 100%;
+    z-index: 10;
+}
+.main_container .blog_img {
+    z-index: 10;
 }
 .main_container .form_container form {
     display: flex;
@@ -225,7 +267,7 @@ footer {
     outline: none;
 }
 .main_container .form_container input:focus,
-.main_container .form_container textarea {
+.main_container .form_container textarea:focus {
     border-width: 2px;
     border-color: #4AC8D5;
 }
@@ -233,6 +275,20 @@ footer {
     width: 80%;
     display: flex;
     justify-content: center;
+}
+.main_container .form_container input[type=file]::file-selector-button {
+    margin-right: 20px;
+    border: none;
+    background: #4AC8D5;
+    padding: 10px 20px;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+    transition: background .2s ease-in-out;
+}
+
+.main_container .form_container input[type=file]::file-selector-button:hover {
+    background: #36939d;
 }
 
 .button-34 {
@@ -243,7 +299,7 @@ footer {
     cursor: pointer;
     font-weight: 700;
     outline: 0 solid transparent;
-    padding: 8px 20px;
+    padding: 8px 50px;
     user-select: none;
     border: 0;
 }
@@ -252,13 +308,134 @@ footer {
     transition: all .4s ease-in-out;
 }
 
-@media (min-width : 840px) {
-    .blog_list_container .blog_cart {
-        width: calc(90% / 2);
+.alert {
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    min-height: 67px;
+    width: 400px;
+    max-width: 90%;
+    border-radius: 12px;
+    padding: 16px 22px 17px 20px;
+    display: flex;
+    align-items: center;
+    color: white;
+}
+
+.alert-success {
+    background: #12c99b;
+}
+
+.singleBlog .singleBlog_container {
+    background-color: #EAE9E9;
+    margin: 2rem;
+    border-radius: 18px;
+    padding: 1rem;
+    display: grid;
+    place-content: center;
+    grid-template-columns: 1fr 1fr;
+    height: 60vh;
+}
+.singleBlog .singleBlog_container .singleBlog_img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.singleBlog .singleBlog_container .singleBlog_information {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 3rem;
+}
+.singleBlog .singleBlog_container .singleBlog_information .list_category ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin: .5rem 0;
+}
+.singleBlog .singleBlog_container .singleBlog_information .list_category ul a {
+    text-decoration: none;
+}
+.singleBlog .singleBlog_container .singleBlog_information .list_category ul li {
+    background-color: #4AC8D5;
+    color: white;
+    border-radius: 18px;
+    padding: 3px 15px;
+    box-shadow: #4AC8D5 0 10px 20px -10px;
+}
+.singleBlog .singleBlog_container .singleBlog_information .list_category ul a li:hover {
+    background: #000;
+    transition: all .3s ease-in-out;
+}
+.singleBlog .singleBlog_container .singleBlog_information h2 {
+    font-size: 34px;
+}
+.singleBlog .singleBlog_container .singleBlog_information p {
+    color: #7E7979;
+    font-size: 15px;
+}
+.singleBlog .singleBlog_container .singleBlog_information .singleBlog_btn {
+    /* margin: 1rem 0; */
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+.singleBlog .singleBlog_container .singleBlog_information .singleBlog_btn a {
+    text-decoration: none;
+}
+.singleBlog .singleBlog_container .singleBlog_information .singleBlog_btn :first-child button {
+    background-color: #12c99b;
+    color: white;
+    font-weight: 600;
+    padding: .3rem 2rem;
+    border: none;
+    border-radius: 18px;
+    box-shadow: #12c99b 0 10px 20px -10px;
+    cursor: pointer;
+}
+.singleBlog .singleBlog_container .singleBlog_information .singleBlog_btn :first-child button:hover {
+    background-color: #0e9976;
+    transition: all .4s ease-in-out;
+}
+.singleBlog .singleBlog_container .singleBlog_information .singleBlog_btn :last-child button {
+    background-color: #ED5E68;
+    color: white;
+    font-weight: 600;
+    padding: .3rem 2rem;
+    border: none;
+    border-radius: 18px;
+    box-shadow: #ED5E68 0 10px 20px -10px;
+    cursor: pointer;
+}
+.singleBlog .singleBlog_container .singleBlog_information .singleBlog_btn :last-child button:hover {
+    background-color: #9d4046;
+    transition: all .4s ease-in-out;
+}
+.select_category {
+    width: 100%;
+}
+.select_category select {
+    width: 80%;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+@keyframes bounce {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
     }
 }
-@media (min-width : 1200px) {
-    .blog_list_container .blog_cart {
-        width: calc(90% / 3);
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
     }
 }
