--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,8 +1,10 @@
-<div class="alert alert-success">
-    <div class="icon__wrapper">
-        <span class="mdi mdi-alert-outline"></span>
-    </div>
-    <p>Blog Add successfully ^^</p>
+<div>
+    <% if (message.length > 0) { console.log(message[0] == "success") %>
+        <div class="alert <%= message[0] == 'success' ? 'alert-success' : 'alert-danger' %>" role="alert">
+            <p><%= message[1] %></p>
+            <button id="closeAlert">X</button>
+        </div>
+    <% } %>
 </div>
 <div class="container_body">
     <div class="carosel">
@@ -24,10 +26,12 @@
                 <% }) %>
             </select>
             <div class="search_container">
-                <input type="search" placeholder="search blogs ...">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                </svg>
+                <form action="/search" method="POST">
+                    <input type="search" name="search" placeholder="search blogs ...">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                    </svg>
+                </form>
             </div>
             <a href="/blog" style="text-decoration: none;">
                 <button class="add_blog_btn">
@@ -52,3 +56,10 @@
         <% }); %>
     </div>
 </div>
+
+<script>
+    let closeAlert = document.getElementById("closeAlert");
+    closeAlert.addEventListener("click", (e) => {
+        console.log(e.target.parentElement.remove());
+    })
+</script>
