--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,5 +1,5 @@
 <div>
-    <% if (message.length > 0) { console.log(message[0] == "success") %>
+    <% if (message.length > 0) { %>
         <div class="alert <%= message[0] == 'success' ? 'alert-success' : 'alert-danger' %>" role="alert">
             <p><%= message[1] %></p>
             <button id="closeAlert">X</button>
@@ -60,6 +60,6 @@
 <script>
     let closeAlert = document.getElementById("closeAlert");
     closeAlert.addEventListener("click", (e) => {
-        console.log(e.target.parentElement.remove());
+        e.target.parentElement.remove();
     })
 </script>
